--- a/Session_5/Normalization.ipynb
+++ b/Session_5/Normalization.ipynb
@@ -1,1 +1,383 @@
-
+{
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Abby263/TSAI_EVA_8/blob/main/Session_5/Normalization.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "0m2JWFliFfKT"
+      },
+      "outputs": [],
+      "source": [
+        "from __future__ import print_function\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "import torch.optim as optim\n",
+        "from torchvision import datasets, transforms\n",
+        "from torch.optim.lr_scheduler import StepLR,OneCycleLR"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h_Cx9q2QFgM7",
+        "outputId": "f75ec007-6b4b-4da8-f8c0-6e4404f2e0e5"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "----------------------------------------------------------------\n",
+            "        Layer (type)               Output Shape         Param #\n",
+            "================================================================\n",
+            "            Conv2d-1            [-1, 8, 26, 26]              72\n",
+            "              ReLU-2            [-1, 8, 26, 26]               0\n",
+            "         LayerNorm-3            [-1, 8, 26, 26]          10,816\n",
+            "           Dropout-4            [-1, 8, 26, 26]               0\n",
+            "            Conv2d-5           [-1, 16, 24, 24]           1,152\n",
+            "              ReLU-6           [-1, 16, 24, 24]               0\n",
+            "         LayerNorm-7           [-1, 16, 24, 24]          18,432\n",
+            "           Dropout-8           [-1, 16, 24, 24]               0\n",
+            "            Conv2d-9           [-1, 10, 24, 24]             160\n",
+            "        MaxPool2d-10           [-1, 10, 12, 12]               0\n",
+            "           Conv2d-11            [-1, 8, 10, 10]             720\n",
+            "             ReLU-12            [-1, 8, 10, 10]               0\n",
+            "        LayerNorm-13            [-1, 8, 10, 10]           1,600\n",
+            "          Dropout-14            [-1, 8, 10, 10]               0\n",
+            "           Conv2d-15              [-1, 8, 8, 8]             576\n",
+            "             ReLU-16              [-1, 8, 8, 8]               0\n",
+            "        LayerNorm-17              [-1, 8, 8, 8]           1,024\n",
+            "          Dropout-18              [-1, 8, 8, 8]               0\n",
+            "           Conv2d-19              [-1, 8, 6, 6]             576\n",
+            "             ReLU-20              [-1, 8, 6, 6]               0\n",
+            "        LayerNorm-21              [-1, 8, 6, 6]             576\n",
+            "          Dropout-22              [-1, 8, 6, 6]               0\n",
+            "           Conv2d-23              [-1, 8, 6, 6]             576\n",
+            "             ReLU-24              [-1, 8, 6, 6]               0\n",
+            "        LayerNorm-25              [-1, 8, 6, 6]             576\n",
+            "          Dropout-26              [-1, 8, 6, 6]               0\n",
+            "        AvgPool2d-27              [-1, 8, 1, 1]               0\n",
+            "           Conv2d-28             [-1, 10, 1, 1]              80\n",
+            "================================================================\n",
+            "Total params: 36,936\n",
+            "Trainable params: 36,936\n",
+            "Non-trainable params: 0\n",
+            "----------------------------------------------------------------\n",
+            "Input size (MB): 0.00\n",
+            "Forward/backward pass size (MB): 0.56\n",
+            "Params size (MB): 0.14\n",
+            "Estimated Total Size (MB): 0.70\n",
+            "----------------------------------------------------------------\n"
+          ]
+        }
+      ],
+      "source": [
+        "import torch.nn.functional as F\n",
+        "\n",
+        "dropout_value = 0.1\n",
+        "\n",
+        "# Layer Normalization\n",
+        "# Source : https://pytorch.org/docs/stable/generated/torch.nn.LayerNorm.html\n",
+        "\n",
+        "class Net(nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super(Net, self).__init__()\n",
+        "        # Input Block\n",
+        "        self.convblock1 = nn.Sequential(\n",
+        "            nn.Conv2d(in_channels=1, out_channels=8, kernel_size=(3, 3), padding=0, bias=False),\n",
+        "            nn.ReLU(),\n",
+        "            nn.LayerNorm([8, 26, 26]),\n",
+        "            nn.Dropout(dropout_value)\n",
+        "        ) # output_size = 26\n",
+        "\n",
+        "        # CONVOLUTION BLOCK 1\n",
+        "        self.convblock2 = nn.Sequential(\n",
+        "            nn.Conv2d(in_channels=8, out_channels=16, kernel_size=(3, 3), padding=0, bias=False),\n",
+        "            nn.ReLU(),\n",
+        "            nn.LayerNorm([16, 24, 24]),\n",
+        "            nn.Dropout(dropout_value)\n",
+        "        ) # output_size = 24\n",
+        "\n",
+        "        # TRANSITION BLOCK 1\n",
+        "        self.convblock3 = nn.Sequential(\n",
+        "            nn.Conv2d(in_channels=16, out_channels=10, kernel_size=(1, 1), padding=0, bias=False),\n",
+        "        ) # output_size = 24\n",
+        "        self.pool1 = nn.MaxPool2d(2, 2) # output_size = 12\n",
+        "\n",
+        "        # CONVOLUTION BLOCK 2\n",
+        "        self.convblock4 = nn.Sequential(\n",
+        "            nn.Conv2d(in_channels=10, out_channels=8, kernel_size=(3, 3), padding=0, bias=False),\n",
+        "            nn.ReLU(),            \n",
+        "            nn.LayerNorm([8, 10, 10]),\n",
+        "            nn.Dropout(dropout_value)\n",
+        "        ) # output_size = 10\n",
+        "        self.convblock5 = nn.Sequential(\n",
+        "            nn.Conv2d(in_channels=8, out_channels=8, kernel_size=(3, 3), padding=0, bias=False),\n",
+        "            nn.ReLU(),            \n",
+        "            nn.LayerNorm([8, 8, 8]),\n",
+        "            nn.Dropout(dropout_value)\n",
+        "        ) # output_size = 8\n",
+        "        self.convblock6 = nn.Sequential(\n",
+        "            nn.Conv2d(in_channels=8, out_channels=8, kernel_size=(3, 3), padding=0, bias=False),\n",
+        "            nn.ReLU(),            \n",
+        "            nn.LayerNorm([8, 6, 6]),\n",
+        "            nn.Dropout(dropout_value)\n",
+        "        ) # output_size = 6\n",
+        "        self.convblock7 = nn.Sequential(\n",
+        "            nn.Conv2d(in_channels=8, out_channels=8, kernel_size=(3, 3), padding=1, bias=False),\n",
+        "            nn.ReLU(),            \n",
+        "            nn.LayerNorm([8, 6, 6]),\n",
+        "            nn.Dropout(dropout_value)\n",
+        "        ) # output_size = 6 ; padding = 1\n",
+        "        \n",
+        "        # OUTPUT BLOCK\n",
+        "        self.gap = nn.Sequential(\n",
+        "            nn.AvgPool2d(kernel_size=6)\n",
+        "        ) # output_size = 1\n",
+        "\n",
+        "        self.convblock8 = nn.Sequential(\n",
+        "            nn.Conv2d(in_channels=8, out_channels=10, kernel_size=(1, 1), padding=0, bias=False),\n",
+        "            # nn.BatchNorm2d(10),\n",
+        "            # nn.ReLU(),\n",
+        "            # nn.Dropout(dropout_value)\n",
+        "        ) \n",
+        "\n",
+        "        self.dropout = nn.Dropout(dropout_value)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        x = self.convblock1(x)\n",
+        "        x = self.convblock2(x)\n",
+        "        x = self.convblock3(x)\n",
+        "        x = self.pool1(x)\n",
+        "        x = self.convblock4(x)\n",
+        "        x = self.convblock5(x)\n",
+        "        x = self.convblock6(x)\n",
+        "        x = self.convblock7(x)\n",
+        "        x = self.gap(x)        \n",
+        "        x = self.convblock8(x)\n",
+        "\n",
+        "        x = x.view(-1, 10)\n",
+        "        return F.log_softmax(x, dim=-1)\n",
+        "\n",
+        "\n",
+        "# !pip install torchsummary\n",
+        "from torchsummary import summary\n",
+        "use_cuda = torch.cuda.is_available()\n",
+        "device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
+        "model = Net().to(device)\n",
+        "summary(model, input_size=(1, 28, 28))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "DqTWLaM5GHgH"
+      },
+      "outputs": [],
+      "source": [
+        "torch.manual_seed(1)\n",
+        "batch_size = 128\n",
+        "\n",
+        "kwargs = {'num_workers': 1, 'pin_memory': True} if use_cuda else {}\n",
+        "train_loader = torch.utils.data.DataLoader(\n",
+        "    datasets.MNIST('../data', train=True, download=True,\n",
+        "                    transform=transforms.Compose([\n",
+        "                        transforms.ToTensor(),\n",
+        "                        transforms.Normalize((0.1307,), (0.3081,))\n",
+        "                    ])),\n",
+        "    batch_size=batch_size, shuffle=True, **kwargs)\n",
+        "test_loader = torch.utils.data.DataLoader(\n",
+        "    datasets.MNIST('../data', train=False, transform=transforms.Compose([\n",
+        "                        transforms.ToTensor(),\n",
+        "                        transforms.Normalize((0.1307,), (0.3081,))\n",
+        "                    ])),\n",
+        "    batch_size=batch_size, shuffle=True, **kwargs)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "8fDefDhaFlwH"
+      },
+      "outputs": [],
+      "source": [
+        "from tqdm import tqdm\n",
+        "\n",
+        "lambda_l1 = 0.01\n",
+        "lambda_orth = 0.01 \n",
+        "\n",
+        "def l1_regularizer(model, lambda_l1=0.01):\n",
+        "    lossl1 = 0\n",
+        "    for model_param_name, model_param_value in model.named_parameters():\n",
+        "            if model_param_name.endswith('weight'):\n",
+        "                lossl1 += lambda_l1 * model_param_value.abs().sum()\n",
+        "    return lossl1\n",
+        "\n",
+        "def orth_regularizer(model, lambda_orth=0.01):\n",
+        "    lossorth = 0\n",
+        "    for model_param_name, model_param_value in model.named_parameters():\n",
+        "            if model_param_name.endswith('weight'):\n",
+        "                param_flat = model_param_value.view(model_param_value.shape[0], -1)\n",
+        "                sym = torch.mm(param_flat, torch.t(param_flat))\n",
+        "                sym -= torch.eye(param_flat.shape[0])\n",
+        "                lossorth += lambda_orth * sym.sum()\n",
+        "    return lossorth\n",
+        "\n",
+        "def train(model, device, train_loader, optimizer, epoch):\n",
+        "    model.train()\n",
+        "    pbar = tqdm(train_loader)\n",
+        "    for batch_idx, (data, target) in enumerate(pbar):\n",
+        "        data, target = data.to(device), target.to(device)\n",
+        "        optimizer.zero_grad()\n",
+        "        output = model(data)\n",
+        "        loss = F.nll_loss(output, target)\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "        pbar.set_description(desc= f'loss={loss.item()} batch_id={batch_idx}')\n",
+        "\n",
+        "def train_l1_loss(model, device, train_loader, optimizer, epoch):\n",
+        "    model.train()\n",
+        "    pbar = tqdm(train_loader)\n",
+        "    for batch_idx, (data, target) in enumerate(pbar):\n",
+        "        data, target = data.to(device), target.to(device)\n",
+        "        optimizer.zero_grad()\n",
+        "        output = model(data)\n",
+        "        loss = F.nll_loss(output, target) + l1_regularizer(model, lambda_l1=lambda_l1)\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "        pbar.set_description(desc= f'loss={loss.item()} batch_id={batch_idx}')\n",
+        "\n",
+        "\n",
+        "def test(model, device, test_loader):\n",
+        "    model.eval()\n",
+        "    test_loss = 0\n",
+        "    correct = 0\n",
+        "    with torch.no_grad():\n",
+        "        for data, target in test_loader:\n",
+        "            data, target = data.to(device), target.to(device)\n",
+        "            output = model(data)\n",
+        "            test_loss += F.nll_loss(output, target, reduction='sum').item()  # sum up batch loss\n",
+        "            pred = output.argmax(dim=1, keepdim=True)  # get the index of the max log-probability\n",
+        "            correct += pred.eq(target.view_as(pred)).sum().item()\n",
+        "\n",
+        "    test_loss /= len(test_loader.dataset)\n",
+        "\n",
+        "    print('\\nTest set: Average loss: {:.4f}, Accuracy: {}/{} ({:.2f}%)\\n'.format(\n",
+        "        test_loss, correct, len(test_loader.dataset),\n",
+        "        100. * correct / len(test_loader.dataset)))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from torch.optim.lr_scheduler import StepLR\n",
+        "\n",
+        "model =  Net().to(device)\n",
+        "optimizer = optim.SGD(model.parameters(), lr=0.01, momentum=0.9)\n",
+        "scheduler = StepLR(optimizer, step_size=6, gamma=0.1)\n",
+        "\n",
+        "for epoch in range(1, 20):\n",
+        "  print('Epoch :', epoch)\n",
+        "  train(model, device, train_loader, optimizer, epoch)\n",
+        "  test(model, device, test_loader)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f-4U6LlWVnT7",
+        "outputId": "9e1f2be5-7bae-45f0-ac3f-6d60ce472624"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch : 1\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "loss=0.4267592430114746 batch_id=468: 100%|██████████| 469/469 [00:52<00:00,  8.91it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Test set: Average loss: 0.2802, Accuracy: 9443/10000 (94.43%)\n",
+            "\n",
+            "Epoch : 2\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "loss=0.19136200845241547 batch_id=468: 100%|██████████| 469/469 [00:52<00:00,  8.99it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Test set: Average loss: 0.1128, Accuracy: 9744/10000 (97.44%)\n",
+            "\n",
+            "Epoch : 3\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "loss=0.1663009226322174 batch_id=153:  33%|███▎      | 153/469 [00:18<00:35,  9.00it/s]"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "K6MbCvuxk09D"
+      },
+      "execution_count": null,
+      "outputs": []
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "include_colab_link": true
+    },
+    "gpuClass": "standard",
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
+}
